--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="./videostream.js"></script>
 </head>
