--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,10 @@
 <script>
     fetch("/api/version").then(r => r.json()).then(r => version.innerText = r);
 
-    const videoStream = new VideoStream(video);
+    const canvas = document.createElement("canvas");
+    video.srcObject = canvas.captureStream();
+    video.play();
+    const videoStream = new VideoStream(canvas);
 
     function selectStream(stream) {
         for (const opt of menu.getElementsByTagName('a')) {
@@ -40,7 +43,7 @@
                 option.text = stream;
                 option.onclick = function () { 
                     if (this.className !== "active") {
-                        videoStream.connectWebSocket(stream);
+                        videoStream.connect(stream);
                         selectStream(stream);
                     }
                 }
@@ -49,7 +52,7 @@
 
             if (r.length > 0) {
                 const stream = r[0];
-                videoStream.connectWebSocket(stream);
+                videoStream.connect(stream);
                 selectStream(stream);
             }
         });
