--- a/html/index.html
+++ b/html/index.html
@@ -19,21 +19,20 @@
 <script>
     fetch("/api/version").then(r => r.json()).then(r => version.innerText = r);
 
+    const audioContext = new AudioContext();
     const canvas = document.createElement("canvas");
     video.srcObject = canvas.captureStream();
-    video.play();
-
-    const audioContext = new AudioContext();
-    const audioTrack = audioContext.createMediaElementSource(video);
     video.addEventListener('play', () => audioContext.resume());
     video.addEventListener('pause', () => audioContext.suspend());
+    video.play();
 
-    const videoStream = new VideoStream(canvas,audioTrack);
+    const videoStream = new VideoStream(canvas, audioContext);
     window.onbeforeunload = () => videoStream.close();
 
     function selectStream(stream) {
         for (const opt of menu.getElementsByTagName('a')) {
             if (opt.url === stream) {
+                videoStream.connect(stream);
                 opt.className = "active";
             } else {
 		        opt.className = "";
@@ -50,7 +49,6 @@
                 option.text = stream;
                 option.onclick = function () { 
                     if (this.className !== "active") {
-                        videoStream.connect(stream);
                         selectStream(stream);
                     }
                 }
@@ -59,7 +57,6 @@
 
             if (r.length > 0) {
                 const stream = r[0];
-                videoStream.connect(stream);
                 selectStream(stream);
             }
         });
