--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,14 @@
 <head>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="module" src="./wc-video-ws.js"></script>
 </head>
 <body>
     <header>
         <nav id="menu"></nav>
     </header>    
     <div id="content">
-        <video id="video" muted playsinline controls preload="none"></video>
+        <wc-video-ws id="videows"></wc-video-ws>
     </div>
     <footer>
             <a href="https://github.com/mpromonet/rtsp2ws">rtsp2ws</a>
@@ -18,26 +19,10 @@
 <script type="module">
     fetch("/api/version").then(r => r.json()).then(r => version.innerText = r);
 
-    import { VideoStream } from './videostream.js';
-    const audioContext = new AudioContext();
-    const canvas = document.createElement("canvas");
-    const stream = canvas.captureStream();
-    const audioTrack = audioContext.createMediaStreamDestination().stream.getAudioTracks()[0];
-    stream.addTrack(audioTrack);
-
-    video.srcObject = stream;
-    video.addEventListener('play', () => audioContext.resume());
-    video.addEventListener('pause', () => audioContext.suspend());
-    video.addEventListener('volumechange', () => videoStream.setVolume(video.muted ? 0 : video.volume));
-    video.play();
-
-    const videoStream = new VideoStream(canvas, audioContext);
-    window.onbeforeunload = () => videoStream.close();
-
     function selectStream(stream) {
         for (const opt of menu.getElementsByTagName('a')) {
             if (opt.url === stream) {
-                videoStream.connect(stream);
+                videows.setAttribute("url", stream);
                 opt.className = "active";
             } else {
 		        opt.className = "";
