--- a/www/all.html
+++ b/www/all.html
@@ -2,18 +2,18 @@
 <head>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="module" src="./wc-video-ws.js"></script>
+    <script type="module" src="./video-ws.js"></script>
     <style>
     #content {
         display: flex;
         flex-flow: row wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
     }
-    wc-video-ws {
+    video-ws {
         height: 25rem;
         width: auto;
-        margin: 1rem;
+        margin: 0.5rem;
     }
     </style>
 </head>
@@ -21,7 +21,7 @@
    <div id="content">
    </div>   
    <footer>
-        <a href="https://github.com/mpromonet/rtsp2ws">rtsp2ws</a>
+        <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
         <div id="version"></div>
     </footer>   
 </body>
@@ -33,8 +33,10 @@
         .then(r => {
             const streamList = Object.keys(r);
             streamList.forEach(stream => {
-                const streamElt = document.createElement("wc-video-ws");
+                const streamElt = document.createElement("video-ws");
                 streamElt.setAttribute("url", stream);
+                streamElt.title = stream.substring(1);
+                streamElt.onclick = () => window.open("/video.html?" + stream, '_blank', 'noopener, noreferrer');
                 content.appendChild(streamElt);
             });
         });
