--- a/www/video.html
+++ b/www/video.html
@@ -2,14 +2,14 @@
 <head>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="module" src="./wc-video-ws.js"></script>
+    <script type="module" src="./video-ws.js"></script>
 </head>
 <body>
     <div id="content">
-        <wc-video-ws id="videows"></wc-video-ws>
+        <video-ws id="videows"></video-ws>
     </div>
     <footer>
-            <a href="https://github.com/mpromonet/rtsp2ws">rtsp2ws</a>
+            <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
             <div id="version"></div>
     </footer>
 </body>
