--- a/www/worker.html
+++ b/www/worker.html
@@ -7,13 +7,13 @@
             #content {
                 display: flex;
                 flex-flow: row wrap;
-                justify-content: space-between;
+                justify-content: space-evenly;
                 align-items: center;
             }
             video {
                 height: 25rem;
                 width: auto;
-                margin: 1rem;
+                margin: 0.5rem;
             }
         </style>        
     </head>    
@@ -21,7 +21,7 @@
         <div id="content">
         </div>
         <footer>
-                <a href="https://github.com/mpromonet/rtsp2ws">rtsp2ws</a>
+                <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
                 <div id="version"></div>
         </footer>
     </body>
@@ -36,10 +36,12 @@
             const streamList = Object.keys(r);
             streamList.forEach(stream => {
                 const video = document.createElement("video");
+                video.title = stream.substring(1);
                 video.muted = true;
                 video.playsinline = true;
                 video.controls = true;
                 video.preload = "none";
+                video.onclick = () => window.open("/video.html?" + stream, '_blank', 'noopener, noreferrer');
                 content.appendChild(video);
 
                 const canvas = document.createElement("canvas");
@@ -47,7 +49,7 @@
                 video.play();
                 const offscreenCanvas = canvas.transferControlToOffscreen();
                 
-                const worker = new Worker('worker.js',  { type: "module" });        
+                const worker = new Worker('worker.js',  { type: "module", name: stream });        
                 worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]);                
             });
         });
