--- a/www/all.html
+++ b/www/all.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>RTSP2Web All</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="module" src="./video-ws.js"></script>
