--- a/www/worker.html
+++ b/www/worker.html
@@ -1,52 +1,28 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>RTSP2Web All Workers</title>
-        <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <style>
-            #content {
-                display: flex;
-                flex-flow: row wrap;
-                justify-content: space-evenly;
-                align-items: center;
-            }
-            video {
-                height: 25rem;
-                width: auto;
-                margin: 0.5rem;
-            }
-        </style>        
-    </head>    
-    <body>
-        <div id="content">
-        </div>
-        <footer>
-                <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
-                <div id="version"></div>
-        </footer>
-    </body>
+<head>
+    <title>RTSP2Web</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="module" src="./video-ws.js"></script>
+</head>
+<body>
+    <header>
+        <nav id="menu"></nav>
+    </header>    
+    <div id="content">
+        <video id="video"></video>
+    </div>
+    <footer>
+            <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
+            <div id="version"></div>
+    </footer>
+</body>
+<script type="module">
+    fetch("/api/version").then(r => r.json()).then(r => version.innerText = r);
 
-    <script>    
-        fetch("/api/version").then(r => r.json()).then(r => version.innerText = r);
-
-
-        fetch("/api/streams")
-        .then(r => r.json())
-        .then(r => {
-            const streamList = Object.keys(r);
-            streamList.forEach(stream => {
-                const video = document.createElement("video");
-                video.title = stream.substring(1);
-                video.muted = true;
-                video.playsinline = true;
-                video.controls = true;
-                video.preload = "none";
-                video.onclick = (e) => {
-                    e.preventDefault();
-                    window.open("/video.html?" + stream, '_blank', 'noopener, noreferrer'); 
-                }
-                content.appendChild(video);
+    function selectStream(stream) {
+        for (const opt of menu.getElementsByTagName('a')) {
+            if (opt.url === stream) {
 
                 const canvas = document.createElement("canvas");
                 video.srcObject = canvas.captureStream();
@@ -54,8 +30,36 @@
                 const offscreenCanvas = canvas.transferControlToOffscreen();
                 
                 const worker = new Worker('worker.js',  { type: "module", name: stream });        
-                worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]);                
+                worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]); 
+
+                opt.className = "active";
+            } else {
+		        opt.className = "";
+            }
+	    }
+    }
+
+    fetch("/api/streams")
+        .then(r => r.json())
+        .then(r => {
+            const streamList = Object.keys(r);
+            streamList.forEach(stream => {
+                const option = document.createElement("a");
+                option.url = stream;
+                option.text = stream.substring(1);
+                option.onclick = function () { 
+                    if (this.className !== "active") {
+                        selectStream(stream);
+                    }
+                }
+                menu.appendChild(option);
             });
+
+            if (streamList.length > 0) {
+                const random = streamList.sort(() => .5 - Math.random());
+                selectStream(random[0]);
+            }
         });
-    </script>        
+</script>
+
 </html>
