--- a/www/worker.html
+++ b/www/worker.html
@@ -3,14 +3,15 @@
     <title>RTSP2Web</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="module" src="./video-ws.js"></script>
+    <link rel="stylesheet" type="text/css" href="video-ws.css">
 </head>
 <body>
     <header>
         <nav id="menu"></nav>
     </header>    
-    <div id="content">
-        <video id="video"></video>
+    <div class="videoContent">
+        <video id="video" muted playsinline controls preload="none"></video>
+        <div id="spinner" class="loading"></div>
     </div>
     <footer>
             <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
@@ -20,17 +21,26 @@
 <script type="module">
     fetch("/api/version").then(r => r.json()).then(r => version.innerText = r);
 
+    let worker = null;
     function selectStream(stream) {
         for (const opt of menu.getElementsByTagName('a')) {
             if (opt.url === stream) {
+                spinner.classList.add("loading");
 
                 const canvas = document.createElement("canvas");
                 video.srcObject = canvas.captureStream();
                 video.play();
                 const offscreenCanvas = canvas.transferControlToOffscreen();
-                
-                const worker = new Worker('worker.js',  { type: "module", name: stream });        
+                if (worker) {
+                    worker.terminate();
+                }                
+                worker = new Worker('worker.js',  { type: "module", name: stream });
                 worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]); 
+                worker.onmessage = function (e) {
+                    if (e.data.type === "loaded") {
+                        spinner.classList.remove("loading");
+                    }
+                }
 
                 opt.className = "active";
             } else {
