--- a/www/allworker.html
+++ b/www/allworker.html
@@ -4,6 +4,7 @@
         <title>RTSP2Web All Workers</title>
         <link rel="icon" type="image/png" href="favicon.png">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="video-ws.css">        
         <style>
             #content {
                 display: flex;
@@ -11,8 +12,9 @@
                 justify-content: space-evenly;
                 align-items: center;
             }
-            video {
-                height: 25rem;
+            .videoWrapper {
+                position: relative;
+                height: 15rem;
                 width: auto;
                 margin: 0.5rem;
             }
@@ -36,6 +38,9 @@
         .then(r => {
             const streamList = Object.keys(r);
             streamList.forEach(stream => {
+                const div = document.createElement("div");
+                div.className = "videoWrapper";
+
                 const video = document.createElement("video");
                 video.title = stream.substring(1);
                 video.muted = true;
@@ -46,7 +51,11 @@
                     e.preventDefault();
                     window.open("/video.html?" + stream, '_blank', 'noopener, noreferrer'); 
                 }
-                content.appendChild(video);
+                div.appendChild(video);
+                const spinner = document.createElement("div");
+                spinner.className = "loading";
+                div.appendChild(spinner);
+                content.appendChild(div);
 
                 const canvas = document.createElement("canvas");
                 video.srcObject = canvas.captureStream();
@@ -54,7 +63,16 @@
                 const offscreenCanvas = canvas.transferControlToOffscreen();
                 
                 const worker = new Worker('worker.js',  { type: "module", name: stream });        
-                worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]);                
+                worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]);
+                worker.onmessage = function (e) {
+                    if (e.data.type === "loaded") {
+                        if (e.data.loaded) {
+                            spinner.classList.remove("loading");
+                        } else {
+                            spinner.classList.add("loading");
+                        }
+                    }
+                }
             });
         });
     </script>        
