--- a/www/worker.html
+++ b/www/worker.html
@@ -3,7 +3,7 @@
     <title>RTSP2Web</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="video-ws.css">
+    <link rel="stylesheet" type="text/css" href="video-ws/video-ws.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
                 if (worker) {
                     worker.terminate();
                 }                
-                worker = new Worker('worker.js',  { type: "module", name: stream });
+                worker = new Worker('video-ws/worker.js',  { type: "module", name: stream });
                 worker.postMessage({ canvas: offscreenCanvas, url: stream }, [offscreenCanvas]); 
                 worker.onmessage = function (e) {
                     if (e.data.type === "loaded") {
