--- a/www/video.html
+++ b/www/video.html
@@ -3,7 +3,7 @@
     <title>RTSP2Web</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="module" src="./video-ws.js"></script>
+    <script type="module" src="video-ws/video-ws.js"></script>
 </head>
 <body>
     <div id="content">
