missing import script

--- a/www/all.html
+++ b/www/all.html
@@ -3,6 +3,7 @@
     <title>RTSP2Web All</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="module" src="video-ws/video-ws.js"></script>    
     <style>
         #content {
             display: flex;
