factorise grid content

--- a/www/all.html
+++ b/www/all.html
@@ -5,12 +5,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="module" src="video-ws/video-ws.js"></script>    
     <style>
-        #content {
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-evenly;
-            align-items: center;
-        }
         video-ws {
             height: 15rem;
             width: auto;
@@ -19,7 +13,7 @@
     </style>
 </head>
 <body>
-   <div id="content">
+   <div id="gridcontent">
    </div>   
    <footer>
         <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
