--- a/www/allworker.html
+++ b/www/allworker.html
@@ -6,12 +6,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="module" src="video-ws/video-worker-ws.js"></script>       
         <style>
-            #content {
-                display: flex;
-                flex-flow: row wrap;
-                justify-content: space-evenly;
-                align-items: center;
-            }
             video-worker-ws {
                 position: relative;
                 height: 15rem;
@@ -21,7 +15,7 @@
         </style>        
     </head>    
     <body>
-        <div id="content">
+        <div id="gridcontent">
         </div>
         <footer>
                 <a href="https://github.com/mpromonet/rtsp2web">rtsp2web</a>
