--- a/www/all.html
+++ b/www/all.html
@@ -32,7 +32,7 @@
                 streamElt.setAttribute("url", stream);
                 streamElt.title = stream.substring(1);
                 streamElt.onclick = () => window.open("/video.html?" + stream, '_blank', 'noopener, noreferrer');
-                content.appendChild(streamElt);
+                gridcontent.appendChild(streamElt);
             });
         });
 </script>
