--- a/www/allworker.html
+++ b/www/allworker.html
@@ -40,7 +40,7 @@
                     e.preventDefault();
                     window.open("/video.html?" + stream, '_blank', 'noopener, noreferrer'); 
                 }
-                content.appendChild(streamElt);
+                gridcontent.appendChild(streamElt);
             });
         });
     </script>        
